Update CHYF footer text for Groq wording

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     Please use your own judgment and reach out to qualified professionals for medical, legal, or mental health decisions.
 </div>
         <div class="tiny">
-            Powered by Groq’s daily free quota. When it’s used up, CHYF will reset at midnight.
+            Powered by Groq’s AI. If CHYF ever pauses for the day, it’ll be here with fresh guidance after midnight.
         </div>
     </div>
 
